Adihu : Wrapping text and alignment of buttons fixed
git-svn-id: https://10.24.239.14:5511/svn/Engage@1043 f308e16d-57e9-4fa7-a310-9aba3baf408f

--- a/Portals/trunk/EngagePortal/EngagePortal/public_html/oracle/webcenter/portalapp/skins/card-portal-business-skin.css
+++ b/Portals/trunk/EngagePortal/EngagePortal/public_html/oracle/webcenter/portalapp/skins/card-portal-business-skin.css
@@ -1132,7 +1132,7 @@ font-style:normal;
         background-image: url("/faces/images/moz_drop.png") !important;
 	width: 18px;
 	height: 21px;
-        padding: 4.5px 16px 5px 1px !important;
+       padding: 6.5px 17px 5px 1px !important;
 }
 
 }
